@@ -1,0 +1,3 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["hud-combinator"].subgroup = "circuit-visual"
+end
